--- a/uix-pagebuilder-sections/css/uix-pagebuilder.css
+++ b/uix-pagebuilder-sections/css/uix-pagebuilder.css
@@ -17,6 +17,7 @@
 	5. Accordion 
 	6. Tabs 
 	7. Progress Bar
+	8. Google Map
 	     
 
 
@@ -220,6 +221,7 @@ img.uix-pb-img,
 
 .uix-pb-container.uix-pb-container-fullwidth {
 	width: auto !important;
+	padding: 0 !important;
 	
 }
 
@@ -688,3 +690,47 @@ img.uix-pb-img,
 		}
 		
 		
+		
+/* ====================================================== 
+   8. Google Map                 
+/* ====================================================== */	
+.uix-pb-map-output .full-map  {
+	height: 100vh !important;
+}
+.google-map-zoom-in, 
+.google-map-zoom-out {
+    height: 32px;
+    width: 32px;
+    cursor: pointer;
+    margin-left: 10px;
+    background-repeat: no-repeat;
+    -webkit-background-size: 32px 64px;
+    -moz-background-size: 32px 64px;
+    background-size: 32px 64px;
+    opacity: .7;
+    z-index: 3;
+    font-size: 30px;
+    color: #fff;
+}
+
+.no-touch .google-map-zoom-in:hover, 
+.no-touch .google-map-zoom-out:hover {
+    opacity: 1;
+}
+
+.google-map-zoom-in:hover, 
+.google-map-zoom-out:hover {
+    opacity: 1;
+}
+
+@media only screen and (min-width: 768px) {
+    .google-map-zoom-in, 
+	.google-map-zoom-out {
+        margin-left: 50px;
+    }
+}
+
+.google-map-zoom-in {
+    margin-top: 50px;
+    margin-bottom: 1px;
+}	  	
