--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -1,8 +1,8 @@
 /* Elements Navigation
 -------------------------------------------------------------- */
 .uix-pagebuilder-col {
-    width: 310px;
-	float: left;
+    width: 300px;
+	display: inline-block;
 	margin-right: 15px;
 	margin-bottom: 15px;
 	position: relative;
@@ -11,7 +11,7 @@
 
 @media screen and (min-width: 769px) and (max-width: 1199px) {
 	.uix-pagebuilder-col {
-		width: 260px;
+		width: 250px;
 	}
 }
 
@@ -23,81 +23,63 @@
 
 
 
-.uix-pagebuilder-col .at-icon-box {
-    background: #18AFD3;
-    position: relative;
-    color: #fff;
-    line-height: 1;
-    top: 0;
-    transition: all 0.2s ease-out;
-    padding: 10px 10px;
-	overflow: hidden;
-}
-
-.uix-pagebuilder-col .at-icon-box-text {
-    font-weight: 300;
-    vertical-align: middle;
-    display: table-cell;
-}
-
-.uix-pagebuilder-col .at-icon-box-text h4 {
-    font-size: 18px;
-    font-weight: 600;
-    margin: 0 0 8px 0;
-	height: 20px;
-	overflow: hidden;
+.uix-pagebuilder-col img {
+	border: 1px solid #E1E1E1;
 	display: block;
-	font-family: serif;
-	text-transform: uppercase;
-}
-
-.uix-pagebuilder-col .at-icon-box-text p {
-    font-size: 12px;
-    line-height: 1.5;
-	display: block;
-	overflow: hidden;
-	height: 55px;
-	filter: alpha(opacity=75);  
-	-moz-opacity: 0.75;   
-	opacity: 0.75;
-	margin: 0;
-
-}
-
-.uix-pagebuilder-col i.fa {
-    vertical-align: middle;
-    margin-right: 12px;
-    font-size: 150px;
-	filter: alpha(opacity=50);  
-	-moz-opacity: 0.5;   
-	opacity: 0.5;
-	position: absolute;
-	z-index: 0;
-	left: -20px;
-
-}
-
-
-.uix-pagebuilder-col a.widget-item-btn {
-    position: absolute;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-	display: block;
-	text-indent: -9999em;
-	overflow: hidden;
-	z-index: 1;
+	width: 100%;
 	-moz-transition: .1s ease-in-out; 
 	-o-transition: .1s ease-in-out;
 	-webkit-transition: .1s ease-in-out; 
 	transition: .1s ease-in-out;
+	vertical-align: top;
+	-webkit-box-shadow: 0px 3px 3px 0px rgba(230,230,230,1);
+	-moz-box-shadow: 0px 3px 3px 0px rgba(230,230,230,1);
+	box-shadow: 0px 3px 3px 0px rgba(230,230,230,1);
+
 }
 
-.uix-pagebuilder-col a.widget-item-btn:hover {
+.uix-pagebuilder-col img:hover {
 	-webkit-box-shadow: 0px 0px 26px 0px rgba(0,0,0,0.23);
 	-moz-box-shadow: 0px 0px 26px 0px rgba(0,0,0,0.23);
 	box-shadow: 0px 0px 26px 0px rgba(0,0,0,0.23);
+	border-color: #D6D6D6;
+}
+
+
+.uix-pagebuilder-col a.widget-item-btn {
+	position: relative;
+	display: block;
+	width: 100%;
+	height: 100%;
+
+}
+
+.uix-pagebuilder-col .t {
+	position: absolute;
+	background: #F9F9F9;
+	border-top: 1px solid #E1E1E1;
+	bottom: 1px;
+	left: 0;
+	color: #737373;
+	font-weight: 600;
+	font-size: 12px;
+	line-height: 25px;
+	height: 25px;
+	overflow: hidden;
+	display: block;
+	width: calc( 100% - 1px );
+	text-align: center;
+	margin-left: 1px;
+	-moz-transition: .1s ease-in-out; 
+	-o-transition: .1s ease-in-out;
+	-webkit-transition: .1s ease-in-out; 
+	transition: .1s ease-in-out;
+	
+}
+
+.uix-pagebuilder-col:hover .t {
+	background:rgba(0,0,0,.7);
+	color: #fff;
 	
 }
 
@@ -415,7 +397,10 @@
 	text-decoration: none;
 	font-size: 10px;
 	border: 1px solid RGBA(94, 184, 60, 1);
-	
+}
+
+.sortable-list .row .widget-items-container .widget-item-btn .img {
+	display: none;
 }
 
 
