--- a/uix-pagebuilder-sections/css/uix-pagebuilder.css
+++ b/uix-pagebuilder-sections/css/uix-pagebuilder.css
@@ -18,7 +18,8 @@
 	6. Tabs 
 	7. Progress Bar
 	8. Google Map
-	     
+	9. Features   
+	10. Pricing      
 
 
 */
@@ -734,3 +735,225 @@ img.uix-pb-img,
     margin-top: 50px;
     margin-bottom: 1px;
 }	  	
+
+
+/* ====================================================== 
+   9. Features                              
+/* ====================================================== */
+.uix-pb-feature{
+
+}
+
+.uix-pb-feature.uix-pb-tc{
+	padding: 1.5em 0 0 0;
+}
+
+	.uix-pb-feature-icon {
+		font-size: 32px;
+
+	}
+	
+		.uix-pb-feature-icon i {
+			border: 1px #090909 solid;
+			-webkit-border-radius: 100%; 
+			-moz-border-radius: 100%; 
+			border-radius: 100%;
+			width: 80px;
+			height: 80px;
+			line-height: 80px;
+			
+		}
+		
+	
+	.uix-pb-feature-icon-side i {
+		
+		margin-right: .4em;
+	}
+	
+	.uix-pb-feature-li{
+		
+	}
+	
+	.uix-pb-feature-title{
+		font-size: 18px;
+		letter-spacing: 0;
+	}
+	
+	.uix-pb-feature-desc{
+		margin: 0;
+		padding: 0;
+		font-size: 13px;
+		line-height: 1.6;
+		padding: .2em 0;
+	}
+	
+	.uix-pb-feature-desc.uix-pb-feature-desc-singlerow{
+		padding-bottom: 1.5em;
+	
+	}
+
+
+
+/* ====================================================== 
+   10. Pricing                              
+/* ====================================================== */
+.uix-pb-price{
+	text-align: center;
+	
+}
+.uix-pb-price:before{
+  padding-top: 3em;
+}
+.uix-pb-price:after{
+	padding-bottom: 0;
+}
+
+	.uix-pb-price ul,
+	.uix-pb-price ol{
+		/*default*/
+		display: block;
+		list-style-type: disc;
+		margin-top: 1em;
+		margin-bottom: 1 em;
+		margin-left: 0;
+		margin-right: 0;
+		padding-left: 40px !important;
+		
+		/*custom*/
+		line-height: 2;
+	}
+	
+	.uix-pb-price li{
+		/*default*/
+		list-style: disc;
+	}
+	
+	
+	.uix-pb-price-black hr{
+		border-color: rgba(0,0,0,.2);
+	}
+	
+	.uix-pb-price-border{
+		padding-top: 1em;
+		border: 1px solid #090909;
+	}
+	
+	/* Remove border hover effect when top is "0" */
+	.uix-pb-price-border-hover {
+		/*top: 0;*/
+	}
+	
+	.uix-pb-price-border,
+	.uix-pb-price-border hr{
+		-moz-transition: .2s ease-in-out; 
+		-o-transition: .2s ease-in-out; 
+		-webkit-transition: .2s ease-in-out;  
+		transition: .2s ease-in-out;
+		margin-top: 25px;
+	}
+	
+	
+	.uix-pb-price-level{
+		font-size: 12px;
+		filter: alpha(opacity=40);  
+		-moz-opacity: 0.4;   
+		opacity: 0.4; 
+	}
+	
+	.uix-pb-price-num{
+		color: #d59a3e;
+		font-weight: 700;
+	}
+	
+	.uix-pb-price-period{
+		font-size: 14px;
+	}
+	
+	
+	.uix-pb-price-detail{
+		text-align: left;
+		padding-bottom: 1.5em;
+		font-size: 13px;
+		
+	}
+	
+	.uix-pb-price-excerpt{
+		height: auto;
+		padding: 0 1em;
+		font-size: 14px;
+	}
+		
+		.uix-pb-price-excerpt p{
+			line-height: 1.5;
+		}
+		
+	
+	
+	.uix-pb-price-bg{
+		padding-top: 30px;
+		height: auto;
+		color: #090909;
+		
+	}
+	
+	
+	.uix-pb-price-bg2{
+		background: #EDEDED;
+		border: 1px solid #EFEFEF;
+		padding: 5px 20px 5px 20px;
+		margin: .4em 0;
+		display: block;
+	}
+	
+		.uix-pb-price-bg-hover:hover h2{
+			color: #77a43a;
+			
+		}
+		
+	
+	
+	.uix-pb-price-border.uix-pb-price-important{
+		/*
+		-webkit-box-shadow: 0px 22px 43px rgba(0,0,0,0.15);
+		-moz-box-shadow: 0px 22px 43px rgba(0,0,0,0.15);
+		box-shadow: 0px 22px 43px rgba(0,0,0,0.15);
+		*/
+		-webkit-transform: translateY(-44px);
+		-ms-transform: translateY(-44px);
+		transform: translateY(-44px);
+		background: rgba(204,255,0,.1);
+
+	}
+	
+	.uix-pb-price-border:hover{
+		border-color: #77a43a;
+		-webkit-box-shadow: inset 0 0px 0px 6px #77a43a;
+		-moz-box-shadow: inset 0 0px 0px 6px #77a43a;
+		box-shadow: inset 0 0px 0px 6px #77a43a;	
+	
+	}
+	
+	.uix-pb-price-border:hover hr{
+		margin: 12px 6px 0 6px;
+		
+	}
+	
+
+	
+
+/* ----------  */
+
+
+@media (max-width: 768px){
+	
+	.uix-pb-price-border.uix-pb-price-important{
+		
+		-webkit-transform: translateY(0);
+		-ms-transform: translateY(0);
+		transform: translateY(0);
+		background: rgba(204,255,0,.1);
+		
+	
+	}
+}
+	
