--- a/uix-pagebuilder-sections/css/uix-pagebuilder.css
+++ b/uix-pagebuilder-sections/css/uix-pagebuilder.css
@@ -249,6 +249,36 @@ img.uix-pb-img,
 	margin: 1.5em 0;
 }
 
+.uix-pb-section-heading {
+	margin: .37em 0 .1em;
+	font-size: 3.2em;
+	text-align: center;
+}
+
+
+@media (max-width: 768px) {
+
+	.uix-pb-section-heading {
+		font-size: 2.2em !important;
+		letter-spacing: 0 !important;
+	}
+
+}
+
+
+.uix-pb-section-hr {
+	margin: 1.5em auto;
+	border-bottom: 5px solid #DDD;
+	width: 50px;
+}
+
+.uix-pb-section-desc {
+	color: #808080;
+	text-align: center;
+	margin-bottom: 2em;
+}
+
+
 
 /* ====================================================== 
    4. Author Card                                
