--- a/uix-pagebuilder-sections/css/uix-pagebuilder.css
+++ b/uix-pagebuilder-sections/css/uix-pagebuilder.css
@@ -250,24 +250,13 @@ img.uix-pb-img,
 }
 
 .uix-pb-section-heading {
-	margin: .37em 0 .1em;
-	font-size: 3.2em;
+	margin: .37em 0 .1em !important;
 	text-align: center;
 }
 
 
-@media (max-width: 768px) {
-
-	.uix-pb-section-heading {
-		font-size: 2.2em !important;
-		letter-spacing: 0 !important;
-	}
-
-}
-
-
 .uix-pb-section-hr {
-	margin: 1.5em auto;
+	margin: .5em auto;
 	border-bottom: 5px solid #DDD;
 	width: 50px;
 }
@@ -275,7 +264,8 @@ img.uix-pb-img,
 .uix-pb-section-desc {
 	color: #808080;
 	text-align: center;
-	margin-bottom: 2em;
+	margin-top: 1.5em;
+	margin-bottom: 2.5em;
 }
 
 
@@ -780,7 +770,6 @@ img.uix-pb-img,
 
 	.uix-pb-feature-icon {
 		font-size: 32px;
-
 	}
 	
 		.uix-pb-feature-icon i {
@@ -800,8 +789,8 @@ img.uix-pb-img,
 		margin-right: .4em;
 	}
 	
-	.uix-pb-feature-li{
-		
+	.uix-pb-feature-li-c3{
+		text-align: center;
 	}
 	
 	.uix-pb-feature-title{
