--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -9,7 +9,7 @@
 	vertical-align: top;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
-    box-sizing: border-box;
+    box-sizing: border-box;padding-bottom: 25px;
 }
 
 @media screen and (min-width: 769px) {
@@ -45,6 +45,7 @@
 	-webkit-box-shadow: 0px 3px 3px 0px rgba(230,230,230,1);
 	-moz-box-shadow: 0px 3px 3px 0px rgba(230,230,230,1);
 	box-shadow: 0px 3px 3px 0px rgba(230,230,230,1);
+	margin-bottom: 25px;
 
 }
 
