--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -9,7 +9,16 @@
 	vertical-align: top;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
-    box-sizing: border-box;padding-bottom: 25px;
+    box-sizing: border-box;
+	border: 1px solid #E1E1E1;
+	-moz-transition: .1s ease-in-out; 
+	-o-transition: .1s ease-in-out;
+	-webkit-transition: .1s ease-in-out; 
+	transition: .1s ease-in-out;
+	-webkit-box-shadow: 0px 3px 3px 0px rgba(230,230,230,1);
+	-moz-box-shadow: 0px 3px 3px 0px rgba(230,230,230,1);
+	box-shadow: 0px 3px 3px 0px rgba(230,230,230,1);	
+	
 }
 
 @media screen and (min-width: 769px) {
@@ -35,21 +44,13 @@
 
 
 .uix-pagebuilder-col img {
-	border: 1px solid #E1E1E1;
 	display: block;
 	width: 100%;
-	-moz-transition: .1s ease-in-out; 
-	-o-transition: .1s ease-in-out;
-	-webkit-transition: .1s ease-in-out; 
-	transition: .1s ease-in-out;
-	-webkit-box-shadow: 0px 3px 3px 0px rgba(230,230,230,1);
-	-moz-box-shadow: 0px 3px 3px 0px rgba(230,230,230,1);
-	box-shadow: 0px 3px 3px 0px rgba(230,230,230,1);
 	margin-bottom: 25px;
 
 }
 
-.uix-pagebuilder-col img:hover {
+.uix-pagebuilder-col:hover {
 	-webkit-box-shadow: 0px 0px 26px 0px rgba(0,0,0,0.23);
 	-moz-box-shadow: 0px 0px 26px 0px rgba(0,0,0,0.23);
 	box-shadow: 0px 0px 26px 0px rgba(0,0,0,0.23);
