--- a/admin/add-ons/uixpbform/css/uixpbform.css
+++ b/admin/add-ons/uixpbform/css/uixpbform.css
@@ -885,7 +885,20 @@
 
 .uixpbform-form-container .dynamic-row {
     display: block;
+	-moz-transition: .1s ease-in-out; 
+	-o-transition: .1s ease-in-out;
+	-webkit-transition: .1s ease-in-out; 
+	transition: .1s ease-in-out;
+
 }
+
+.uixpbform-form-container .dynamic-row.hover {
+	-webkit-box-shadow: -3px 0px 0px 0px #DC4D50;
+	-moz-box-shadow: -3px 0px 0px 0px #DC4D50;
+	box-shadow: -3px 0px 0px 0px #DC4D50;
+}
+
+
 
 .uixpbform-form-container .dynamic-row .uixpbform-input-text {
     margin-bottom: 12px;
